# poptrie_project

./: .gitignore  Dockerfile  LICENSE  README.md  autogen_poptrie.sh  autogen_radix_tree.sh  build.sh  make_all.sh  run.sh  run_poptrie_tests.sh  run_tree_bitmap_tests.sh  setup.sh
documentation/: main.tex
modified_poptrie/: Makefile.am  buddy.c  poptrie.c  poptrie.h
modified_poptrie/tests/: basic.c  basic6.c
modified_radix_tree/: LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  radix.c  radix.h
modified_radix_tree/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
modified_radix_tree/tests/: basic.c
modified_sail/: CMakeLists.txt  Fib.cpp  Fib.h  main.cpp  test.txt
modified_tree_bitmap/: bitmap_v4.c  bitmap_v4.d  bitmap_v4.h  bitmap_v6.d  fast_lookup.d  hash.d  hmap.d  ipv4.rib.20170101.0000_fib  ipv4.rib.20170109.1600_fib  ipv4.rib.20170112.0800_fib  main.c  main.d  mb_node.d  mm_color.d  prefix_lookup  preprocessed-ipv6.rib.20170101.0000_fib.txt  preprocessed-ipv6.rib.20170109.1600_fib.txt  preprocessed-ipv6.rib.20170112.0800_fib.txt  util.d
output/: poptrie-linx-rib.20141217.0000-p46-0.out.txt  poptrie-linx-rib.20141217.0000-p52.out.txt  poptrie-preprocessed-ipv4.rib.20170101.0000.txt  poptrie-preprocessed-ipv4.rib.20170109.1600.out.txt  poptrie-preprocessed-ipv4.rib.20170112.0800.out.txt  radix-linx-rib.20141217.0000-p52.out.txt  radixtree-preprocessed-ipv4.rib.20170109.1600.out.txt  tree-bitmap-linx-rib.20141217.0000-p52.out.txt  tree-bitmap-preprocessed-ipv4.rib.20170112.0800.out.txt
scripts/: autogen_poptrie.sh
tests/: radix_tests.sh  run_poptrie_tests.sh  run_tree_bitmap_tests.sh  sail_tests.sh
tests/tests_dump/: original_tests.tar
tests/tests_dump/ipv4/: SAIL_LIMITEDpreprocessed-ipv4.rib.20170101.0000.txt  SAIL_LIMITEDpreprocessed-ipv4.rib.20170109.1600.txt  SAIL_LIMITEDpreprocessed-ipv4.rib.20170112.0800.txt  SAIL_preprocessed-ipv4.rib.20170101.0000.txt  preprocessed-ipv4.rib.20170101.0000.txt  (+4 more)
(+4 files in other folders)
